<resources>
    <string name="app_name">ServiceDemo</string>
    <string name="btn_play">Play</string>
    <string name="btn_pause">Pause</string>
    <string name="btn_change">Change</string>
    <string name="btn_start_service">Start Service</string>
    <string name="btn_stop_service">Stop Service</string>
    <string name="btn_unbind_service">Unbind Service</string>
    <string name="btn_bind_service">Bind Service</string>
</resources>
